--- a/package.json
+++ b/package.json
@@ -5,35 +5,20 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^18.11.10",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@vercel/ncc": "^0.34.0",
-    "eslint": "^8.2.0",
-    "eslint-config-airbnb": "19.0.4",
-    "eslint-config-node": "^4.1.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard-with-typescript": "^23.0.0",
-    "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-simple-import-sort": "^8.0.0",
-    "prettier": "^2.8.1",
-    "typescript": "*"
+    "typescript": "5.6.3"
   },
   "scripts": {
     "build": "ncc build ./src/index.ts -o lib",
     "lint": "eslint src/**/*.ts"
   },
   "dependencies": {
-    "@actions/core": "^1.10.0",
-    "@actions/github": "^5.1.1",
-    "@octokit/core": "^4.1.0",
-    "@octokit/plugin-paginate-rest": "^5.0.1",
-    "@octokit/rest": "^19.0.5",
-    "openai": "^3.1.0"
-  }
+    "@actions/core": "^1.11.1",
+    "@actions/github": "^6.0.0",
+    "@octokit/core": "^6.1.2",
+    "@octokit/plugin-paginate-rest": "^11.3.5",
+    "@octokit/rest": "^21.0.2",
+    "openai": "^4.71.1"
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
