--- a/.github/workflows/gpt-commit-summarizer.yml
+++ b/.github/workflows/gpt-commit-summarizer.yml
@@ -1,6 +1,5 @@
-name: GPT Commits summarizer
+name: GPT Commit Summary
 # Summary: This action will write a comment about every commit in a pull request, containing major points
-# Add a comment
 
 on:
   pull_request:
@@ -11,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: KanHarI/gpt-commit-summarizer@master
+      - uses: dirtycajunrice/gpt-commit-summarizer@main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
