--- a/action.yml
+++ b/action.yml
@@ -9,6 +9,10 @@ inputs:
     description: 'The GitHub token to use for authenticating the action'
     required: true
     default: ''
+  ignored:
+    description: 'List of ignored files'
+    required: false
+    default: ''
 branding:
     icon: 'aperture'
     color: 'purple'
