--- a/package.json
+++ b/package.json
@@ -20,5 +20,5 @@
     "@octokit/rest": "^21.0.2",
     "openai": "^4.71.1"
   },
-  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
+  "packageManager": "yarn@4.5.1"
 }
